ITJ-87: Zwischenstand