@@ -1,18 +1,31 @@
 import org.gradle.plugins.ide.eclipse.model.AccessRule
 
+// ITJ-87: support JDK 13
+plugins {
+  id 'org.openjfx.javafxplugin' version '0.0.8'
+}
+javafx {
+    version = "13"
+    modules = [ 'javafx.controls', 'javafx.swing' ]
+    
+    // In order to start an add-in in Eclispe, follow https://openjfx.io/openjfx-docs/ 
+    // section "JavaFX and Eclipse": add as JVM arguments:
+    // --module-path "\path\to\javafx-sdk-13\lib" --add-modules javafx.controls,javafx.swing
+}
+
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'maven'
 apply plugin: 'maven-publish'
 apply plugin: 'signing'
 
-sourceCompatibility = 1.8
+sourceCompatibility = 13
 
 group = 'com.wilutions.joa'
 
 // Version number
 // Also stored in joa/res/com/wilutions/com/version.properties 
-version = '1.0.4.0'
+version = '1.0.5.0'
 
 archivesBaseName = 'JOA'
 
@@ -55,9 +68,6 @@ repositories {
 }
 
 dependencies {
-	compile project (":joa-decl")
-	compile group: 'org.swinglabs', name: 'jxlayer', version: '3.0.4' 
-	compile group: 'org.swinglabs', name: 'swingx', version: '1.6.1' 
 	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
 }
 
@@ -121,7 +131,7 @@ uploadArchives {
 		        
 		        // optionally artifactId can be defined here 
 		        description 'Java Library for Micosoft Office Add-ins'
-		        url 'http://www.wilutions.com/joa/index.html'
+		        url 'https://www.wilutions.com'
 		
 		        scm {
 		          connection 'scm:https://github.com/wolfgangimig/joa'
